force-app/main/default/objects/CM_Tournament__c/CM_Tournament__c.object-meta.xml
<CustomObject>
    <label>CM Tournament</label>
    <nameField>
        <label>CM Tournament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Tournaments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>