force-app/main/default/objects/CM_Tournament__c/fields/CM_Location__c.field-meta.xml
<CustomField>
    <fullName>CM_Location__c</fullName>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>