force-app/main/default/objects/CM_Tournament__c/fields/CM_Tournament_Type__c.field-meta.xml
<CustomField>
    <fullName>CM_Tournament_Type__c</fullName>
    <label>Tournament Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLC</fullName>
                <default>true</default>
                <label>GLC</label>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>